# testRust

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/testrust/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/testrust/: MainActivity.java
app/src/main/release/: signature
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/testrust/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/src/: lib.rs  log_utils.rs
