
[package]
name = "rust"
version = "0.1.0"
authors = ["Nish Tahir <nish.tahir@willowtreeapps.com>"]

[dependencies]
jni = "0.5.2"
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"
tokio = { version = "0.2", features = ["full"] }
log = "0.4"
android_logger = "0.8"
#openssl = { version = "0.10.29", features = ["vendored"] }
#openssl-sys = { version = "0.9.55" }

[lib]
crate_type = ["staticlib", "dylib"]

[features]
default = ["foo"]
foo = []
bar = []

